# fastapi-prometheus-and-grafana

./: pyproject.toml
src/: main.py
